--- a/01-axe/.zed/settings.json
+++ b/01-axe/.zed/settings.json
@@ -1,11 +1,8 @@
 {
   "format_on_save": "on",
-
   "lsp": {
     "clangd": {
-      "binary": {
-        "arguments": ["--function-arg-placeholders=0"]
-      }
+      "binary": {}
     }
   }
 }
