fireball dapper dasher

--- a/02-dapper-dasher/.zed/settings.json
+++ b/02-dapper-dasher/.zed/settings.json
@@ -3,7 +3,7 @@
   "lsp": {
     "clangd": {
       "binary": {
-        "arguments": ["--function-arg-placeholders=0"]
+        "arguments": []
       }
     }
   }
