render idle char

--- a/04-shooter-platformer/CMakeLists.txt
+++ b/04-shooter-platformer/CMakeLists.txt
@@ -19,6 +19,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 # Use pkg-config to find SDL3 from Homebrew
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SDL3 REQUIRED sdl3)
+pkg_check_modules(SDL3_IMAGE REQUIRED sdl3-image)
 
 # Add source files
 set(SOURCES
@@ -29,13 +30,14 @@ set(SOURCES
 add_executable(mygame ${SOURCES})
 
 # Link SDL3
-target_link_directories(mygame PRIVATE ${SDL3_LIBRARY_DIRS})
-target_link_libraries(mygame PRIVATE ${SDL3_LIBRARIES})
+target_link_directories(mygame PRIVATE ${SDL3_IMAGE_LIBRARY_DIRS})
+target_link_libraries(mygame PRIVATE ${SDL3_IMAGE_LIBRARIES})
 
 # Include directories
 target_include_directories(mygame PRIVATE
     ${CMAKE_SOURCE_DIR}/include
     ${SDL3_INCLUDE_DIRS}
+    ${SDL3_IMAGE_INCLUDE_DIRS}
 )
 
-target_compile_options(mygame PRIVATE ${SDL3_CFLAGS_OTHER})
+target_compile_options(mygame PRIVATE ${SDL3_CFLAGS_OTHER} ${SDL3_IMAGE_CFLAGS_OTHER})
